tests/fixtures/invalid/pow_none_bool_float.py
# Cannot call pow() with None, Bool, Float
x = pow(None, True, 1.0)
